--- a/public/css/style.css
+++ b/public/css/style.css
@@ -218,6 +218,14 @@
     fill: rgb(231, 222, 222);
     margin-left: 5px;
   }
+
+  #svg-title .disabled {
+    width: 40px;
+    height: 40px;
+    fill: rgb(224, 21, 21);
+    margin-left: 5px;
+  }
+
   #svg-title .icons:hover{
     fill: #0f0;
     cursor: pointer;
